# ProcessImages

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/clients/: CMakeLists.txt
app/clients/include/clients/: Client.hpp  ClientData.hpp  IClient.hpp
app/clients/src/: Client.cpp
app/exceptions/: CMakeLists.txt
app/exceptions/include/exceptions/: Exceptions.hpp
app/exceptions/src/: Exceptions.cpp
app/server/: CMakeLists.txt
app/server/include/server/: BOOSTMessages.hpp  Distributor.hpp  LowerClass.hpp  Server.hpp  ServerWrapper.hpp  Timer.hpp  UpperClass.hpp
app/server/src/: Distributor.cpp  LowerClass.cpp  Messages.hpp  Server.cpp  ServerWrapper.cpp  Timer.cpp  UpperClass.cpp
app/sockets/: CMakeLists.txt
app/sockets/include/sockets/: Socket.hpp
app/sockets/src/: Socket.cpp
app/workers/: CMakeLists.txt
app/workers/include/workers/: Worker.hpp
app/workers/src/: Worker.cpp
tests/ut/: CMakeLists.txt  TestClient.cpp  TestExceptions.cpp
